# src/app/api/services.ts
@@ -1,1 +1,2 @@
+export { ClientesService } from './services/clientes.service';
 export { WeatherForecastService } from './services/weather-forecast.service';
